--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 click==8.1.7
 markdown-it-py==3.0.0
 mdurl==0.1.2
-polars==0.20.29
+numpy==1.26.4
+polars==0.20.30
 Pygments==2.18.0
 rich==13.7.1
 shellingham==1.5.4
