--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ requires-python = ">=3.12"
 readme = "README.md"
 license = {text = "MIT"}
 
+[project.scripts]
+csv-helper = "csv_helper.main:app"
+
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
