--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "typer>=0.12.3",
     "polars>=0.20.30",
     "numpy>=1.26.4",
+    "pytest>=8.2.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
