--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "typer>=0.12.3",
     "polars>=0.20.30",
     "numpy>=1.26.4",
-    "pytest>=8.2.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -25,3 +24,8 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.dev-dependencies]
+test = [
+    "pytest>=8.2.1",
+]
