--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "csv-helper"
 version = "0.1.0"
-description = "A simple CLI for working with CSV data"
+description = "A simple CLI for imputing masked counts in CSV data"
 authors = [
     {name = "Andrew Tiu", email = "andrew.tiu88@gmail.com"},
 ]
