Use tox for running tests
Change badge link

Try tox + GH action

Try to fix tox errors

Try again

Try simplifying

Try again

Revert to pip to install just tox

Specify groups = dev in tox.ini to catch pytest, tox, and tox-pdm

Try using pdm sync instead of direct pip

Use only pdm for syncing tox dev deps then running tox itself

Try to fig out the right amount of stuff

Try more

Try again

Try

Try

Try

Install tox tox-pdm just pip

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,16 @@
-name: CI
+name: Tests
 
 on:
   push:
+    branches:
+      - main
+    paths-ignore:
+      - "*.md"
   pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - "*.md"
 
 jobs:
   test:
@@ -27,7 +35,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pdm sync -d -G testing
-      - name: Run tests
+          # pdm install -d -G tox
+          python -m pip install --upgrade tox tox-pdm
+      - name: Run tests with tox
         run: |
-          pdm run -v pytest tests
+          pdm run tox --version
+          pdm run tox -e py
