--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ distribution = true
 test = [
     "pytest>=8.3.2",
 ]
+tox = [
+    "tox>=4.18.0",
+    "tox-pdm>=0.7.2",
+]
+
+[tool.pdm.scripts]
+test = "pytest tests -v"
