--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up PDM
+      - name: Set up PDM with python ${{ matrix.python-version }}
         uses: pdm-project/setup-pdm@v3
         with:
           python-version: ${{ matrix.python-version }}
